--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,22 @@
-accelerate==1.12.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.3
-aiosignal==1.4.0
-anyio==4.12.1
-attrs==25.4.0
-bitsandbytes==0.49.1
-certifi==2026.1.4
-charset-normalizer==3.4.4
-cut-cross-entropy==25.1.1
-datasets==4.3.0
-diffusers==0.36.0
-dill==0.3.8
-docstring_parser==0.17.0
-filelock==3.20.3
-frozenlist==1.8.0
-fsspec==2024.6.1
-h11==0.16.0
-hf-xet==1.2.0
-hf_transfer==0.1.9
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.36.0
-idna==3.11
-importlib_metadata==8.7.1
-Jinja2==3.1.6
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mdurl==0.1.2
-mpmath==1.3.0
-msgspec==0.20.0
-multidict==6.7.1
-multiprocess==0.70.16
-networkx==3.6.1
-numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-packaging==26.0
-pandas==3.0.0
-peft==0.18.1
-pillow==12.1.0
-propcache==0.4.1
-protobuf==6.33.4
-psutil==7.2.1
-pyarrow==23.0.0
-Pygments==2.19.2
-python-dateutil==2.9.0.post0
-PyYAML==6.0.3
-regex==2026.1.15
-requests==2.32.5
-rich==14.3.1
-safetensors==0.7.0
-sentencepiece==0.2.1
-six==1.17.0
-sympy==1.13.1
-tokenizers==0.22.2
-torch==2.5.1+cu124
-torchaudio==2.5.1+cu124
-torchvision==0.20.1+cu124
-tqdm==4.67.1
-transformers==4.57.6
-triton==3.1.0
-trl==0.24.0
-typeguard==4.4.4
-typing_extensions==4.15.0
-tyro==1.0.5
-unsloth==2026.1.4
-unsloth_zoo==2026.1.4
-urllib3==2.6.3
+# 핵심 엔진 (안정적인 버전 고정)
+torch==2.5.1
+torchvision==0.20.1
+torchaudio==2.5.1
+--extra-index-url https://download.pytorch.org/whl/cu124
+
+# 가속 및 양자화 도구
 xformers==0.0.28.post3
-xxhash==3.6.0
-yarl==1.22.0
-zipp==3.23.0
+bitsandbytes>=0.43.0
+
+# HuggingFace & 학습 라이브러리
+transformers<4.47.0
+datasets<=2.21.0
+trl<=0.12.0
+peft>=0.10.0
+accelerate>=0.30.0
+
+# 유틸리티
+numpy<2.0
+fsspec<=2025.9.0
+sentencepiece
+protobuf
